// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an object as a list of key value pairs 1`] = `
<div>
  <dl
    class="descriptionList"
  >
    <div
      class="termGroup"
    >
      <dt
        class="base regular base heading"
      >
        Issued
      </dt>
      <dd
        class="base regular base text"
      >
        2018-12-08
      </dd>
    </div>
    <div
      class="termGroup"
    >
      <dt
        class="base regular base heading"
      >
        Due
      </dt>
      <dd
        class="base regular base text"
      >
        2019-01-06
      </dd>
    </div>
  </dl>
</div>
`;

exports[`renders an object as a list of key value pairs with an element 1`] = `
<div>
  <dl
    class="descriptionList"
  >
    <div
      class="termGroup"
    >
      <dt
        class="base regular base heading"
      >
        Foo
      </dt>
      <dd
        class="base regular base text"
      >
        Foo
      </dd>
    </div>
    <div
      class="termGroup"
    >
      <dt
        class="base regular base heading"
      >
        Bar
      </dt>
      <dd
        class="base regular base text"
      >
        Bar
      </dd>
    </div>
  </dl>
</div>
`;
